@@ -14,6 +14,13 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+18 July 2015 V.Ivanchenko (hadr-cross-V10-00-22)
+-------------------------
+- G4NeutronInelasticXS, G4NeutronCaptureXS - fixed isotope cross 
+    including retrieve, data management, isotope x-section and 
+    isotope selection (the problem was reported by Steve Quillin
+    and analyzed by Tatsumi Koi).
+
 27 May 2015  A.Ribon      (hadr-cross-V10-00-20)
 ---------------------------------------------------
 - G4ComponentGGHadronNucleusXsc : Grichine's extension of applicability
